content: fix a small overlapping issue with icons

--- a/hn.user.styl
+++ b/hn.user.styl
@@ -213,6 +213,8 @@
                     }
                 }
             }
+            // ? Fix a small overlapping issue with box-shadow.
+            > center { padding-right: 1px; }
             // ? Hidden button.
             &.nosee {
                 visibility: visible !important;
